--- a/client/app/account/login/login.scss
+++ b/client/app/account/login/login.scss
@@ -7,7 +7,7 @@ $btnTextAlt:                        #000;
 $btnFacebookBackground:             #3B5998;
 $btnFacebookBackgroundHighlight:    #133783;
 $btnTwitterBackground:              #2daddc;
-$btnTwitterBackgroundHighlight:     #0271bf;
+$btnTwitterBackgroundHighlight:     #1582bf;
 $btnGooglePlusBackground:           #dd4b39;
 $btnGooglePlusBackgroundHighlight:  #c53727;
 $btnGithubBackground:               #fafafa;
@@ -18,13 +18,17 @@ $btnGithubBackgroundHighlight:      #ccc;
 
 .btn-facebook {
   @include button-variant($btnText, $btnFacebookBackgroundHighlight, $btnFacebookBackgroundHighlight);
+  border-radius: 0;
 }
 .btn-twitter {
   @include button-variant($btnText, $btnTwitterBackground, $btnTwitterBackgroundHighlight);
+  border-radius: 0;
 }
 .btn-google-plus {
   @include button-variant($btnText, $btnGooglePlusBackground, $btnGooglePlusBackgroundHighlight);
+  border-radius: 0;
 }
 .btn-github {
   @include button-variant($btnTextAlt, $btnGithubBackground, $btnGithubBackgroundHighlight);
+  border-radius: 0;
 }
