export footer css to the component/footer folder

--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -58,5 +58,6 @@ $brand-warning: #f39c12;
 @import 'account/login/login.scss';
 @import 'admin/admin.scss';
 @import 'main/main.scss';
+@import 'footer/footer.scss';
 @import 'navbar/navbar.scss';
 // endinjector
