pushing not functionning update method of character attributes and a lot of endpoints for the shop features

--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -81,6 +81,7 @@ body {
 @import 'admin/admin.scss';
 @import 'character/character.scss';
 @import 'main/main.scss';
+@import 'shop/shop.scss';
 @import 'footer/footer.scss';
 @import 'navbar/navbar.scss';
 // endinjector
